--- a/main.tex
+++ b/main.tex
@@ -59,14 +59,14 @@
 %%
 %% The "author" command and its associated commands are used to define
 %% the authors and their affiliations.
-\author[1]{TBD}[%
+\author[1]{Nurul Srianda Putri}[%
 % orcid=0000-0002-0877-7063,
-email=tbd@ui.ac.id,
+email=nurul.srianda@ui.ac.id,
 % url=https://yamadharma.github.io/,
 ]
 % \cormark[1]
 % \fnmark[1]
-\author[1]{TBD}[%
+\author[1]{Fariz Darari}[%
 % orcid=0000-0002-0877-7063,
 email=tbd@ui.ac.id,
 % url=https://yamadharma.github.io/,
