--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 
 %%
 %% The "title" command
-\title{An Analytical Framework for Knowledge Wealth of Knowledge Graphs}
+\title{Quantifying Knowledge Wealth in Knowledge Graphs: A Case Study of Wikidata}
 
 % \tnotemark[1]
 % \tnotetext[1]{You can use this document as the template for preparing your
