remove contributor detail first

--- a/main.tex
+++ b/main.tex
@@ -59,37 +59,37 @@
 %%
 %% The "author" command and its associated commands are used to define
 %% the authors and their affiliations.
-\author[1]{Nurul Srianda Putri}[%
+\author[1]{TBD}[%
 % orcid=0000-0002-0877-7063,
-email=nurul.srianda@ui.ac.id,
+email=tbd@tbd.com,
 % url=https://yamadharma.github.io/,
 ]
 % \cormark[1]
 % \fnmark[1]
-\author[1]{Fariz Darari}[%
+\author[1]{TBD}[%
 % orcid=0000-0002-0877-7063,
-email=tbd@ui.ac.id,
+email=tbd@tbd.com,
 % url=https://yamadharma.github.io/,
 ]
 % \cormark[1]
 % \fnmark[1]
-\address[1]{Faculty of Computer Science, Universitas Indonesia, Depok, Indonesia}
+\address[1]{TBD}
 
 \author[2]{TBD}[%
 % orcid=0000-0001-7116-9338,
-email=tbd@catapa.com,
+email=tbd@tbd.com,
 % url=https://kmitd.github.io/ilaria/,
 ]
 % \fnmark[1]
-\address[2]{CATAPA, Jakarta, Indonesia}
+\address[2]{TBD}
 
 \author[3]{TBD}[%
 % orcid=0000-0002-9421-8566,
-email=tbd@gdplabs.id,
+email=tbd@tbd.com,
 % url=http://conceptbase.sourceforge.net/mjf/,
 ]
 % \fnmark[1]
-\address[3]{GDP Labs, Jakarta, Indonesia}
+\address[3]{TBD}
 
 %% Footnotes
 % \cortext[1]{Corresponding author.}
