--- a/main.tex
+++ b/main.tex
@@ -50,8 +50,8 @@
 
 %%
 %% The "title" command
-\title{Quantifying Knowledge Wealth in Knowledge Graphs: A Case Study of Wikidata}
-===> How Quantifying Knowledge Wealth Reveals Knowledge Gap: A Case Study of Wikidata
+% \title{Quantifying Knowledge Wealth in Knowledge Graphs: A Case Study of Wikidata}
+\title{How Quantifying Knowledge Wealth Reveals Knowledge Gap: A Case Study of Wikidata}
 
 % \tnotemark[1]
 % \tnotetext[1]{You can use this document as the template for preparing your
