--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,8 @@ email=tbd@tbd.com,
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-Along with the rapid development of data volumes, the need for machine-readable data is inevitable. As a result, the use of knowledge graph data structures becomes more popular. With its development, quality aspects of a knowledge graph need to be considered, one of which is knowledge wealth: the amount of information contained in a knowledge graph. A high level of knowledge wealth in a knowledge graph may indicate the high quality of a knowledge graph; conversely, a low level of knowledge wealth can be a sign of poor quality of a knowledge graph. However, there is no formal way to define knowledge wealth and how to measure and analyze it. This study proposes a framework to analyze knowledge wealth and the level of knowledge imbalance in the RDF knowledge graph by seeing how the knowledge wealth of an entity class is spread over the knowledge graph using statistical measures and visualization. To evaluate this framework, some use cases were conducted on several classes on Wikidata to detect bias as well as to explore how different definitions of type of wealth impact the magnitude of the Gini coefficient. It is hoped that the results of this study can assist in researching knowledge wealth in the knowledge graph and be used to optimize the efforts of editing and developing knowledge graph projects by the contributors.
+% Along with the rapid development of data volumes, the need for machine-readable data is inevitable. As a result, the use of knowledge graph data structures becomes more popular. With its development, quality aspects of a knowledge graph need to be considered, one of which is knowledge wealth: the amount of information contained in a knowledge graph. A high level of knowledge wealth in a knowledge graph may indicate the high quality of a knowledge graph; conversely, a low level of knowledge wealth can be a sign of poor quality of a knowledge graph. However, there is no formal way to define knowledge wealth and how to measure and analyze it. This study proposes a framework to analyze knowledge wealth and the level of knowledge imbalance in the RDF knowledge graph by seeing how the knowledge wealth of an entity class is spread over the knowledge graph using statistical measures and visualization. To evaluate this framework, some use cases were conducted on several classes on Wikidata to detect bias as well as to explore how different definitions of type of wealth impact the magnitude of the Gini coefficient. It is hoped that the results of this study can assist in researching knowledge wealth in the knowledge graph and be used to optimize the efforts of editing and developing knowledge graph projects by the contributors.
+The increasing volume of data has amplified the demand for structured, machine-readable information, making knowledge graphs essential for organizing and storing knowledge. One key aspect of knowledge graph quality is knowledge wealth, which represents the amount of information an entity possess. A higher knowledge wealth suggests a more informative and robust knowledge graph, whereas a low wealth level indicates gaps and potential biases. However, there is no standardized method to quantify and analyze knowledge wealth. This study introduces a framework to measure knowledge wealth and assess knowledge imbalance within knowledge graphs, and focusing on Wikidata as a case study. The proposed approach employs statistical measures and visualizations to analyze the distribution of knowledge wealth across entity classes. Through various use cases, the study demonstrates how disparities in knowledge representation impact balance in data. The framework also examines how different definitions of knowledge wealth influence inequality measurements, such as the Gini coefficient and Lorenz curves. The findings provide valuable insights for knowledge graph contributors, assisting in optimizing the efforts of editathon and developing knowledge graph projects by the contributors and reducing information imbalances.
 \end{abstract}
 
 %%
@@ -109,7 +110,9 @@ Along with the rapid development of data volumes, the need for machine-readable 
 \begin{keywords}
   Knowledge graphs \sep
   knowledge wealth \sep
-  knowledge imbalance analysis
+  knowledge imbalance \sep
+  data quality \sep
+  Wikidata \sep
 \end{keywords}
 
 %%
