--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -1,3 +1,272 @@
+@inproceedings{Mihindukulasooriya24,
+  author       = {Nandana Mihindukulasooriya},
+  editor       = {Lorena Etcheverry and
+                  Vanessa L{\'{o}}pez Garcia and
+                  Francesco Osborne and
+                  Romana Pernisch},
+  title        = {{DBLP} to Wikidata: Populating Scholarly Articles in Wikidata},
+  booktitle    = {Proceedings of the {ISWC} 2024 Posters, Demos and Industry Tracks:
+                  From Novel Ideas to Industrial Practice co-located with 23nd International
+                  Semantic Web Conference {(ISWC} 2024), Hanover, Maryland, USA, November
+                  11-15, 2024},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3828},
+  publisher    = {CEUR-WS.org},
+  year         = {2024},
+  url          = {https://ceur-ws.org/Vol-3828/paper37.pdf},
+  timestamp    = {Tue, 26 Nov 2024 17:05:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/semweb/Mihindukulasooriya24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{MihindukulasooriyaTDNCP24,
+  author       = {Nandana Mihindukulasooriya and
+                  Sanju Tiwari and
+                  Daniil Dobriy and
+                  Finn {\AA}rup Nielsen and
+                  Tek Raj Chhetri and
+                  Axel Polleres},
+  editor       = {Mehwish Alam and
+                  Marco Rospocher and
+                  Marieke van Erp and
+                  Laura Hollink and
+                  Genet Asefa Gesese},
+  title        = {Scholarly Wikidata: Population and Exploration of Conference Data
+                  in Wikidata Using LLMs},
+  booktitle    = {Knowledge Engineering and Knowledge Management - 24th International
+                  Conference, {EKAW} 2024, Amsterdam, The Netherlands, November 26-28,
+                  2024, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {15370},
+  pages        = {243--259},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-77792-9\_15},
+  doi          = {10.1007/978-3-031-77792-9\_15},
+  timestamp    = {Sun, 19 Jan 2025 13:18:21 +0100},
+  biburl       = {https://dblp.org/rec/conf/ekaw/MihindukulasooriyaTDNCP24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{BolinchesG23,
+  author       = {Jorge Bolinches and
+                  Daniel Garijo},
+  editor       = {Lucie{-}Aim{\'{e}}e Kaffee and
+                  Simon Razniewski and
+                  Kholoud Alghamdi and
+                  Hiba Arnaout},
+  title        = {SALTBot: Linking Software and Articles in Wikidata},
+  booktitle    = {Proceedings of the Wikidata Workshop 2023 co-located with 22nd International
+                  Semantic Web Conference {(ISWC} 2023), Athens, Greece, November 13,
+                  2023},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3640},
+  publisher    = {CEUR-WS.org},
+  year         = {2023},
+  url          = {https://ceur-ws.org/Vol-3640/paper12.pdf},
+  timestamp    = {Tue, 20 Feb 2024 17:19:52 +0100},
+  biburl       = {https://dblp.org/rec/conf/wikidata/BolinchesG23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{WangS96,
+  author       = {Richard Y. Wang and
+                  Diane M. Strong},
+  title        = {Beyond Accuracy: What Data Quality Means to Data Consumers},
+  journal      = {J. Manag. Inf. Syst.},
+  volume       = {12},
+  number       = {4},
+  pages        = {5--33},
+  year         = {1996},
+  url          = {https://doi.org/10.1080/07421222.1996.11518099},
+  doi          = {10.1080/07421222.1996.11518099},
+  timestamp    = {Tue, 16 Aug 2022 23:04:55 +0200},
+  biburl       = {https://dblp.org/rec/journals/jmis/WangS96.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ZaveriRMPLA16,
+  author       = {Amrapali Zaveri and
+                  Anisa Rula and
+                  Andrea Maurino and
+                  Ricardo Pietrobon and
+                  Jens Lehmann and
+                  S{\"{o}}ren Auer},
+  title        = {Quality assessment for Linked Data: {A} Survey},
+  journal      = {Semantic Web},
+  volume       = {7},
+  number       = {1},
+  pages        = {63--93},
+  year         = {2016},
+  url          = {https://doi.org/10.3233/SW-150175},
+  doi          = {10.3233/SW-150175},
+  timestamp    = {Wed, 07 Dec 2022 23:03:27 +0100},
+  biburl       = {https://dblp.org/rec/journals/semweb/ZaveriRMPLA16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{WisesaDKNR19,
+  author       = {Avicenna Wisesa and
+                  Fariz Darari and
+                  Adila Krisnadhi and
+                  Werner Nutt and
+                  Simon Razniewski},
+  editor       = {Mayank Kejriwal and
+                  Pedro A. Szekely and
+                  Rapha{\"{e}}l Troncy},
+  title        = {Wikidata Completeness Profiling Using ProWD},
+  booktitle    = {Proceedings of the 10th International Conference on Knowledge Capture,
+                  {K-CAP} 2019, Marina Del Rey, CA, USA, November 19-21, 2019},
+  pages        = {123--130},
+  publisher    = {{ACM}},
+  year         = {2019},
+  url          = {https://doi.org/10.1145/3360901.3364425},
+  doi          = {10.1145/3360901.3364425},
+  timestamp    = {Sun, 06 Oct 2024 21:10:26 +0200},
+  biburl       = {https://dblp.org/rec/conf/kcap/WisesaDKNR19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{IssaAHCDZ21,
+  author       = {Subhi Issa and
+                  Onaopepo Adekunle and
+                  Fay{\c{c}}al Hamdi and
+                  Samira Si{-}Said Cherfi and
+                  Michel Dumontier and
+                  Amrapali Zaveri},
+  title        = {Knowledge Graph Completeness: {A} Systematic Literature Review},
+  journal      = {{IEEE} Access},
+  volume       = {9},
+  pages        = {31322--31339},
+  year         = {2021},
+  url          = {https://doi.org/10.1109/ACCESS.2021.3056622},
+  doi          = {10.1109/ACCESS.2021.3056622},
+  timestamp    = {Mon, 03 Mar 2025 21:25:36 +0100},
+  biburl       = {https://dblp.org/rec/journals/access/IssaAHCDZ21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{LuthfiDA22,
+  author       = {Muhammad Jilham Luthfi and
+                  Fariz Darari and
+                  Amanda Carrisa Ashardian},
+  editor       = {Vojtech Sv{\'{a}}tek and
+                  Valentina Anita Carriero and
+                  Mar{\'{\i}}a Poveda{-}Villal{\'{o}}n and
+                  Christian Kindermann and
+                  Lu Zhou},
+  title        = {SoCK: {SHACL} on Completeness Knowledge},
+  booktitle    = {Proceedings of the 13th Workshop on Ontology Design and Patterns {(WOP}
+                  2022) co-located with the 21th International Semantic Web Conference
+                  {(ISWC} 2022), Online, October 24, 2022},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3352},
+  publisher    = {CEUR-WS.org},
+  year         = {2022},
+  url          = {https://ceur-ws.org/Vol-3352/paper1.pdf},
+  timestamp    = {Mon, 06 Nov 2023 11:53:02 +0100},
+  biburl       = {https://dblp.org/rec/conf/semweb/LuthfiDA22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{XueZ23,
+  author       = {Bingcong Xue and
+                  Lei Zou},
+  title        = {Knowledge Graph Quality Management: {A} Comprehensive Survey},
+  journal      = {{IEEE} Trans. Knowl. Data Eng.},
+  volume       = {35},
+  number       = {5},
+  pages        = {4969--4988},
+  year         = {2023},
+  url          = {https://doi.org/10.1109/TKDE.2022.3150080},
+  doi          = {10.1109/TKDE.2022.3150080},
+  timestamp    = {Sun, 19 Jan 2025 13:53:51 +0100},
+  biburl       = {https://dblp.org/rec/journals/tkde/XueZ23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{RamadhanaDPNRA20,
+  author       = {Nadyah Hani Ramadhana and
+                  Fariz Darari and
+                  Panca O. Hadi Putra and
+                  Werner Nutt and
+                  Simon Razniewski and
+                  Refo Ilmiya Akbar},
+  editor       = {Valentina Ivanova and
+                  Patrick Lambrix and
+                  Catia Pesquita and
+                  Vitalis Wiens},
+  title        = {User-Centered Design for Knowledge Imbalance Analysis: {A} Case Study
+                  of ProWD},
+  booktitle    = {Proceedings of the Fifth International Workshop on Visualization and
+                  Interaction for Ontologies and Linked Data co-located with the 19th
+                  International Semantic Web Conference {(ISWC} 2020), Virtual Conference
+                  (originally planned in Athens, Greece), November 02, 2020},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {2778},
+  pages        = {14--27},
+  publisher    = {CEUR-WS.org},
+  year         = {2020},
+  url          = {https://ceur-ws.org/Vol-2778/paper2.pdf},
+  timestamp    = {Fri, 10 Mar 2023 16:23:09 +0100},
+  biburl       = {https://dblp.org/rec/conf/semweb/RamadhanaDPNRA20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{RamadizsaDNR23,
+  author       = {Millenio Ramadizsa and
+                  Fariz Darari and
+                  Werner Nutt and
+                  Simon Razniewski},
+  editor       = {Lucie{-}Aim{\'{e}}e Kaffee and
+                  Simon Razniewski and
+                  Kholoud Alghamdi and
+                  Hiba Arnaout},
+  title        = {Knowledge Gap Discovery: {A} Case Study of Wikidata},
+  booktitle    = {Proceedings of the Wikidata Workshop 2023 co-located with 22nd International
+                  Semantic Web Conference {(ISWC} 2023), Athens, Greece, November 13,
+                  2023},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3640},
+  publisher    = {CEUR-WS.org},
+  year         = {2023},
+  url          = {https://ceur-ws.org/Vol-3640/paper7.pdf},
+  timestamp    = {Tue, 20 Feb 2024 17:19:52 +0100},
+  biburl       = {https://dblp.org/rec/conf/wikidata/RamadizsaDNR23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{AbianMS22,
+  author       = {David Abi{\'{a}}n and
+                  Albert Mero{\~{n}}o{-}Pe{\~{n}}uela and
+                  Elena Simperl},
+  editor       = {Ulrike Sattler and
+                  Aidan Hogan and
+                  C. Maria Keet and
+                  Valentina Presutti and
+                  Jo{\~{a}}o Paulo A. Almeida and
+                  Hideaki Takeda and
+                  Pierre Monnin and
+                  Giuseppe Pirr{\`{o}} and
+                  Claudia d'Amato},
+  title        = {An Analysis of Content Gaps Versus User Needs in the Wikidata Knowledge
+                  Graph},
+  booktitle    = {The Semantic Web - {ISWC} 2022 - 21st International Semantic Web Conference,
+                  Virtual Event, October 23-27, 2022, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13489},
+  pages        = {354--374},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-19433-7\_21},
+  doi          = {10.1007/978-3-031-19433-7\_21},
+  timestamp    = {Mon, 28 Aug 2023 21:17:24 +0200},
+  biburl       = {https://dblp.org/rec/conf/semweb/AbianMS22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+%%%%%
+
 @book{hrm-book,
   title = {{Human Resource Management}},
   numpages = {443},
@@ -152,3 +421,44 @@ numpages = {4}
 }
 
 % ---------------------------------
+
+@misc{wealthOed,
+  publisher = {Oxford English Dictionary},
+  title = {{Wealth, N. meanings, etymology and more}},
+  howpublished = {\url{https://www.oed.com/dictionary/wealth_n}},
+  year = {n.d.},
+  note = {Accessed: 2025-03-19}
+}
+
+@article{SaezG16,
+  author = {Emmanuel Saez and 
+            Gabriel Zucman},
+  journal = {The Quarterly Journal of Economics},
+  number = {2},
+  title = {{Wealth Inequality in the United States since 1913: Evidence from Capitalized Income Tax Data}},
+  volume = {131},
+  year = {2016},
+  url = {https://doi.org/10.1093/qje/qjw004},
+  doi = {10.1093/qje/qjw004}
+}
+
+@article{Kakwani1977,
+  author = {N. C. Kakwani},
+  journal = {Econometrica},
+  number = {2},
+  title = {{Applications of Lorenz Curves in Economic Analysis}},
+  volume = {45},
+  pages = {719--728},
+  publisher = {The Econometric Society},
+  year = {1977},
+  url = {https://doi.org/10.2307/1911684}
+}
+
+@book{FosterS1997,
+  author = {James Foster and
+            Amartya Sean},
+  editor = {},
+  publisher = {Oxford University Press},
+  title = {On Economic Inequality},
+  year = {1997}
+}
