--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -462,3 +462,12 @@ numpages = {4}
   title = {On Economic Inequality},
   year = {1997}
 }
+
+@misc{w3crdf,
+  author       = {Richard Cyganiak and David Wood and Markus Lanthaler},
+  title        = {{RDF 1.1 Concepts and Abstract Syntax}},
+  howpublished = {\url{https://www.w3.org/TR/rdf11-concepts/}},
+  year         = {2014},
+  note         = {W3C Recommendation},
+  institution  = {World Wide Web Consortium (W3C)}
+}
