--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -471,3 +471,18 @@ numpages = {4}
   note         = {W3C Recommendation},
   institution  = {World Wide Web Consortium (W3C)}
 }
+
+@misc{w3cowl,
+  author       = {Sean Bechhofer and
+                  Frank van Harmelen and
+                  Jim Hendler and
+                  Ian Horrocks and
+                  Deborah L. McGuinness and
+                  Peter F. Patel-Schneider and
+                  Lynn Andrea Stein},
+  title        = {{OWL Web Ontology Language Reference}},
+  howpublished = {\url{https://www.w3.org/TR/owl-ref/}},
+  year         = {2014},
+  note         = {W3C Recommendation},
+  institution  = {World Wide Web Consortium (W3C)}
+}
