--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{threeparttable}
+\usepackage[nameinlink]{cleveref}
 \usepackage[english]{babel}
 \usepackage{booktabs}  % For professional table formatting
 \usepackage{tabularx}  % For flexible column width
@@ -106,7 +107,10 @@ url=,
 %% article.
 \begin{abstract}
 % Along with the rapid development of data volumes, the need for machine-readable data is inevitable. As a result, the use of knowledge graph data structures becomes more popular. With its development, quality aspects of a knowledge graph need to be considered, one of which is knowledge wealth: the amount of information contained in a knowledge graph. A high level of knowledge wealth in a knowledge graph may indicate the high quality of a knowledge graph; conversely, a low level of knowledge wealth can be a sign of poor quality of a knowledge graph. However, there is no formal way to define knowledge wealth and how to measure and analyze it. This study proposes a framework to analyze knowledge wealth and the level of knowledge imbalance in the RDF knowledge graph by seeing how the knowledge wealth of an entity class is spread over the knowledge graph using statistical measures and visualization. To evaluate this framework, some use cases were conducted on several classes on Wikidata to detect bias as well as to explore how different definitions of type of wealth impact the magnitude of the Gini coefficient. It is hoped that the results of this study can assist in researching knowledge wealth in the knowledge graph and be used to optimize the efforts of editing and developing knowledge graph projects by the contributors.
-The increasing volume of data has amplified the demand for structured, machine-readable information, making knowledge graphs essential for organizing and storing knowledge. Understanding and ensuring the quality of knowledge graphs is essential to improving their fairness and usability. One key aspect of knowledge graph quality is knowledge wealth, which represents the amount of information an entity possess. A higher knowledge wealth suggests a more informative and robust knowledge graph, whereas a low wealth level indicates gaps and potential biases. However, there is no standardized method to quantify and analyze knowledge wealth. This study introduces a novel framework for quantifying knowledge wealth and assessing knowledge gap within knowledge graphs, and focuses on Wikidata as a case study. The proposed approach formalizes three notions of knowledge wealth based on property cardinality, property type, and link direction, and employs statistical measures and visualizations, including metrics such as the Gini coefficient and Lorenz curves, to analyze the distribution of knowledge wealth across entity classes. We also develop a Python-based implementation that supports both analysis and insight generation. Through empirical evaluation, we reveal significant knowledge gaps across gender (males vs. female entities) and geographic regions (western vs. non-western entities). We also examine how different definitions of knowledge wealth influence inequality measurements. Additionally, we uncover a structural gap across property types, where certain properties (e.g., object, literal, ID) contribute unequally to entity wealth, leading to systemic imbalances. Our findings offer valuable insights for identifying underrepresented entities and support data enrichment efforts aimed at closing knowledge gaps in open KGs.
+The increasing volume of data has amplified the demand for structured, machine-readable information, making knowledge graphs essential for organizing and storing knowledge. Understanding and ensuring the quality of knowledge graphs are essential to improving their fairness and usability. One key aspect of knowledge graph quality is knowledge wealth, which represents the amount of information contained in the graph.
+At the entity level, wealth indicates how much information is associated with that entity. When aggregated across entities, it reflects the overall informativeness of the knowledge graph. A higher level of knowledge wealth across the graph suggests a more informative and robust resource, whereas a low wealth level points to limited information availability.
+% A higher level of knowledge wealth suggests a more informative and robust knowledge graph, whereas a low wealth level indicates gaps and potential biases. 
+However, there is no standardized method to quantify and analyze knowledge wealth. This study introduces a novel framework for quantifying knowledge wealth and assessing knowledge gap within knowledge graphs, and focuses on Wikidata as a case study. The proposed approach formalizes three notions of knowledge wealth, and their combinations, based on property cardinality, property type, and link direction, and employs statistical measures and visualizations such as the Gini coefficient and Lorenz curves, to analyze the distribution of knowledge wealth. We also develop a Python-based implementation that supports analysis facilitates and insight discovery. Through empirical evaluation, we reveal significant knowledge gaps across gender (male vs. female entities) and geographic regions (western vs. non-western entities). We also examine how different definitions of knowledge wealth influence inequality measurements. Another key finding is the structural gap across property types, where certain properties (e.g., object, literal, ID) contribute disproportionately to entity wealth, leading to systemic imbalances. Our findings provide valuable insights into identifying underrepresented entities and support data enrichment efforts aimed at closing knowledge gaps in open KGs.
 % Through various use cases, the study demonstrates how disparities in knowledge representation impact balance in data. The framework also examines how different definitions of knowledge wealth influence inequality measurements, such as the Gini coefficient and Lorenz curves. The findings provide valuable insights for knowledge graph contributors, assisting in optimizing the efforts of editathon and developing knowledge graph projects by the contributors and reducing information imbalances.
 \end{abstract}
 
@@ -144,11 +148,11 @@ The increasing volume of data has amplified the demand for structured, machine-r
 
 \input{chapters/6 - conclusion/6 - conclusion.tex}
 
-\begin{acknowledgments}
+% \begin{acknowledgments}
 
-TBD
+% TBD
 
-\end{acknowledgments}
+% \end{acknowledgments}
 
 \bibliography{mybibliography}
 
